--- a/blog/templates/blog/inicio.html
+++ b/blog/templates/blog/inicio.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block titulo %} Página principal {% endblock %}
+
+{% block contenido %}
+    <h1>Listado de entradas</h1>
+    <ul>
+        {% for entrada in entradas %}
+        <li> - - Titulo: <a href="{% url 'detalle_post' pk=entrada.pk %}">{{entrada.titulo}}</a></li>
+        {% endfor %}
+    </ul>
+
+    <a href="{% url 'autores' %}">Autores</a>
+
+{% endblock %}
