--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,9 @@
 h1 {
-    color: blue;
+    color: rgb(255, 0, 0);
+}
+
+.boton {
+    border: 2px solid black;
+    padding: 4px;
+    border-radius: 18px;
 }
