--- a/blog/templates/blog/detalle_post.html
+++ b/blog/templates/blog/detalle_post.html
@@ -6,5 +6,5 @@
     <h1>{{entrada.titulo}}</h1>
     <p> - Autor: {{entrada.autor}}</p>
     <p> - - Cuerpo: {{entrada.cuerpo}}</p>
-    <p><a href="{% url 'inicio' %}">Volver al blog principal</a></p>
+    <p><a href="{% url 'inicio' %}" class="boton">Volver al blog principal</a></p>
 {% endblock %}
