--- a/blog/templates/blog/inicio.html
+++ b/blog/templates/blog/inicio.html
@@ -10,6 +10,5 @@
         {% endfor %}
     </ul>
 
-    <a href="{% url 'autores' %}">Autores</a>
-
+    <a href="{% url 'autores' %}" class="boton">Autores</a>
 {% endblock %}
